# aplicative

./: README.md  aplicative.cabal
src/: Lib.hs
